@@ -3940,14 +3940,14 @@ ISO9660 (plain and RockRidge), nilfs2, UFS1, UFS2 and ZFS are assumed
 to be UTF-8. This might be false on systems configured with legacy charset
 but as long as the charset used is superset of ASCII you should be able to
 access ASCII-named files. And it's recommended to configure your system to use
-UTF-8 to access the filesystem, convmv may help with migration. AFFS and HFS
-never use unicode and GRUB assumes them to be in Latin1 and MacRoman
-respectively. GRUB handles filesystem case-insensitivity however no attempt
-is performed at case conversion of international characters so e.g. a file
-named lowercase greek alpha is treated as different from the one named
-as uppercase alpha. The filesystems in questions are NTFS (except POSIX
-namespace), HFS+ (by default), FAT, exFAT
-and ZFS (configurable on per-subvolume basis by property ``casesensitivity'',
+UTF-8 to access the filesystem, convmv may help with migration. AFFS, SFS
+and HFS never use unicode and GRUB assumes them to be in Latin1, Latin1
+and MacRoman respectively. GRUB handles filesystem case-insensitivity however
+no attempt is performed at case conversion of international characters
+so e.g. a file named lowercase greek alpha is treated as different from
+the one named as uppercase alpha. The filesystems in questions are
+NTFS (except POSIX namespace), HFS+ (by default), FAT, exFAT and
+ZFS (configurable on per-subvolume basis by property ``casesensitivity'',
 default sensitive). On ZFS subvolumes marked as case insensitive files
 containing lowercase international characters are inaccessible.
 Also like all supported filesystems except HFS+ and ZFS (configurable on
